Bug 79621 - [BDW]igt/kms_cursor_crc/cursor-size-change fails
Summary: [BDW]igt/kms_cursor_crc/cursor-size-change fails
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Rodrigo Vivi
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-04 05:40 UTC by Guo Jinxian
Modified: 2017-10-06 14:37 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (123.35 KB, text/plain)
2014-06-04 05:40 UTC, Guo Jinxian
no flags Details
Fix BDW cursor offsets (1.22 KB, patch)
2014-06-05 00:57 UTC, Rodrigo Vivi
no flags Details | Splinter Review

Description Guo Jinxian 2014-06-04 05:40:11 UTC
Created attachment 100386 [details]
dmesg

==System Environment==
--------------------------
Regression: No. 
It's new case

Non-working platforms: BDW

==kernel==
--------------------------
origin/drm-intel-nightly: 0a37b5d366831590ebc976018d1bd812ef526a98(fails)
    drm-intel-nightly: 2014y-06m-03d-19h-31m-28s integration manifest
origin/drm-intel-next-queued: 92d7377929140bc120f7742ee3afffcb2a827fe4(fails)
     drm/i915: Simplify intel_gpu_reset
origin/drm-intel-fixes: d23db88c3ab233daed18709e3a24d6c95344117f(fails)
    drm/i915: Prevent negative relocation deltas from wrapping

==Bug detailed description==
-----------------------------
igt/kms_cursor_crc/cursor-size-change fails

Output:
./kms_cursor_crc --run-subtest cursor-size-change
IGT-Version: 1.6-g3c70e6a (x86_64) (Linux: 3.15.0-rc3_drm-intel-next-queued_92d737_20140604+ x86_64)
Beginning cursor-size-change on pipe A, connector eDP-1

cursor-size-change on pipe A, connector eDP-1: PASSED

Beginning cursor-size-change on pipe B, connector eDP-1
Test assertion failure function test_cursor_size, file kms_cursor_crc.c:405:
Last errno: 0, Success
Failed assertion: igt_crc_equal(&crc[i], &ref_crc)
Subtest cursor-size-change: FAIL


==Reproduce steps==
---------------------------- 
1. ./kms_cursor_crc --run-subtest cursor-size-change
Comment 1 Rodrigo Vivi 2014-06-05 00:57:17 UTC
Created attachment 100427 [details] [review]
Fix BDW cursor offsets

Attached patch fixes this bug
Comment 2 Jani Nikula 2014-06-05 08:38:49 UTC
(In reply to comment #1)
> Created attachment 100427 [details] [review] [review]
> Fix BDW cursor offsets
> 
> Attached patch fixes this bug

The patch hasn't been committed anywhere has it? Reopen, let's only close bugs once we have the fix committed so we won't forget.
Comment 3 Rodrigo Vivi 2014-06-05 14:55:53 UTC
You are right. It hadn't... sorry about that.

Now it is on -fixes already so I guess we can now close this bug, right?
Comment 4 Guo Jinxian 2014-06-18 08:53:12 UTC
Verified on latest -nightly
Output:
root@x-bdw05:/GFX/Test/Intel_gpu_tools/intel-gpu-tools/tests# ./kms_cursor_crc --run-subtest cursor-size-change  IGT-Version: 1.7-g1b1f4b1 (x86_64) (Linux: 3.15.0-rc8_drm-intel-nightly_fff6c5_20140618+ x86_64)
Beginning cursor-size-change on pipe A, connector eDP-1

cursor-size-change on pipe A, connector eDP-1: PASSED

Beginning cursor-size-change on pipe B, connector eDP-1

cursor-size-change on pipe B, connector eDP-1: PASSED

Beginning cursor-size-change on pipe C, connector eDP-1

cursor-size-change on pipe C, connector eDP-1: PASSED

Subtest cursor-size-change: SUCCESS
Comment 5 Elizabeth 2017-10-06 14:37:54 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.